<resources>
    <string name="app_name">GCMTesting</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="register">Register</string>
    <string name="already_a_user">Already a user?</string>
    <string name="invalid_fields">Invalid fields.</string>
    <string name="empty_fields">Empty fields.</string>
    <string name="invalid_email">Invalid email address.</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_must_be_at_least">"Password must be at least "</string>
    <string name="characters">" characters."</string>
    <string name="email_in_use">Email already in use.</string>
    <string name="attempting_sign_up">Attempting sign up!</string>
    <string name="we_are_working_on_it">We are working on it...</string>
    <string name="there_was_an_error">There was an error, please try again.</string>
    <string name="sign_in">Sign In</string>
    <string name="not_a_user">Not a user?</string>
    <string name="attempting_sign_in">Attempting sign in!</string>
    <string name="sign_in_unsuccessful">Sign in was not successful.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_messaging">Messaging</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_in_as">Signed in as</string>
    <string name="registering_for_gcm">Registering for Google Cloud Messaging.</string>
    <string name="gcm_send_message">Ready for Google Cloud Messaging.</string>
    <string name="token_error_message">Error connecting to Google Cloud Messaging please restart.</string>
    <string name="cannot_message_self">You cannot message yourself silly!</string>
    <string name="message_success">Message sent successfully!</string>
    <string name="message_error">Error sending message, please try again.</string>
    <string name="error_signing_out">Error signing out, please try again.</string>
    <string name="signing_out">Signing out...</string>
</resources>
