<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.waynebjackson.gcmtesting.login.SignInFragment">

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ui_element_default_margin"
        android:layout_marginTop="@dimen/ui_element_default_margin"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ui_element_default_margin"
        android:layout_marginTop="@dimen/ui_element_default_margin"
        android:inputType="textPassword"
        android:singleLine="true"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/ui_element_default_margin"
        android:layout_marginTop="@dimen/ui_element_default_margin"
        android:text="@string/sign_in"/>

    <TextView
        android:id="@+id/not_a_user_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/ui_element_default_margin"
        android:layout_marginTop="@dimen/ui_element_default_margin"
        android:textSize="@dimen/text_size_subheading"
        android:text="@string/not_a_user"/>

</LinearLayout>
