<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".messaging.MessagingFragment"
    tools:showIn="@layout/activity_messaging">

    <TextView
        android:id="@+id/signed_in_as_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ui_element_default_margin"
        android:layout_marginTop="@dimen/ui_element_default_margin"
        android:textSize="@dimen/text_size_caption"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ui_element_default_margin"
        android:layout_marginTop="@dimen/ui_element_default_margin"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/message_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ui_element_default_margin"
        android:layout_marginTop="@dimen/ui_element_default_margin"
        android:inputType="textCapSentences"
        android:hint="@string/message"/>

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/ui_element_default_margin"
        android:layout_marginTop="@dimen/ui_element_default_margin"
        android:text="@string/send"/>

    <TextView
        android:id="@+id/sign_out_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/ui_element_default_margin"
        android:layout_marginTop="@dimen/ui_element_default_margin"
        android:textSize="@dimen/text_size_subheading"
        android:text="@string/sign_out"/>

</LinearLayout>
